# swagger-embed-axum

./: Cargo.toml  LICENSE
assets/: index.css  index.html
src/: lib.rs
